// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabEditable > should render in edition mode 1`] = `
<div>
  <div
    class="_tab_editable_732c04"
  >
    <div
      class="_label_732c04"
    >
      <span
        class="_text_732c04"
      >
        label-value-test
      </span>
      <button
        class="_edit_button_732c04"
        title="Edit tag"
      >
        <svg
          aria-hidden="true"
          class="_icon_2be8fc _primary_2be8fc _edit_icon_732c04"
          fill="none"
          viewBox="0 0 21 21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.418 17.861 1 20l2.139-6.418m4.279 4.279 10.7-10.7a3.027 3.027 0 0 0-2.14-5.165c-.802 0-1.571.319-2.139.886l-10.7 10.7m4.279 4.279-4.279-4.279m2.139 2.14 7.844-7.844m-1.426-2.853 4.279 4.279"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <i>
          Edit tag
        </i>
      </button>
    </div>
    <input
      aria-label="Edit tag"
      class="_input_732c04"
      type="text"
      value="label-value-test"
    />
  </div>
</div>
`;

exports[`TabEditable > should render properly 1`] = `
<div>
  <div
    class="_tab_editable_732c04"
  >
    <div
      class="_label_732c04"
    >
      <span
        class="_text_732c04"
      >
        ...
      </span>
    </div>
  </div>
</div>
`;

exports[`TabEditable > should render with className 1`] = `
<div>
  <div
    class="_tab_editable_732c04 className-test"
  >
    <div
      class="_label_732c04"
    >
      <span
        class="_text_732c04"
      >
        ...
      </span>
    </div>
  </div>
</div>
`;

exports[`TabEditable > should render with editable 1`] = `
<div>
  <div
    class="_tab_editable_732c04"
  >
    <div
      class="_label_732c04"
    >
      <span
        class="_text_732c04"
      >
        ...
      </span>
      <button
        class="_edit_button_732c04"
        title="Edit tag"
      >
        <svg
          aria-hidden="true"
          class="_icon_2be8fc _primary_2be8fc _edit_icon_732c04"
          fill="none"
          viewBox="0 0 21 21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.418 17.861 1 20l2.139-6.418m4.279 4.279 10.7-10.7a3.027 3.027 0 0 0-2.14-5.165c-.802 0-1.571.319-2.139.886l-10.7 10.7m4.279 4.279-4.279-4.279m2.139 2.14 7.844-7.844m-1.426-2.853 4.279 4.279"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <i>
          Edit tag
        </i>
      </button>
    </div>
  </div>
</div>
`;

exports[`TabEditable > should render with label 1`] = `
<div>
  <div
    class="_tab_editable_732c04"
  >
    <div
      class="_label_732c04"
    >
      <span
        class="_text_732c04"
      >
        label-test
      </span>
    </div>
  </div>
</div>
`;
